--- a/Clip2Png.csproj
+++ b/Clip2Png.csproj
@@ -61,12 +61,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clip2Png.cs" />
-    <Compile Include="FilenameMaker.cs" />
-    <Compile Include="ImageUtils.cs" />
+    <Compile Include="Utils\FilenameMaker.cs" />
+    <Compile Include="Utils\ImageUtils.cs" />
     <Compile Include="Utils\OptionParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Utils.cs" />
+    <Compile Include="Utils\ClipSequence.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -85,8 +86,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if $(ConfigurationName) == Release (
-xcopy "$(TargetDir)$(TargetFileName)" "c:\utils\bin" /y
-)</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
